Add till Run-Length-Encoding

--- a/200259_B.Anshuman/Ass_2/bob/bob.ipynb
+++ b/200259_B.Anshuman/Ass_2/bob/bob.ipynb
@@ -41,7 +41,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 52,
+            "execution_count": 1,
             "metadata": {},
             "outputs": [
                 {
@@ -52,32 +52,47 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 52
+                    "execution_count": 1
                 }
             ],
             "source": [
-                "# submit\n",
+                "#submit\n",
                 "function bob(stimulus)\n",
-                "    for ch in stimulus\n",
-                "        if ch == '?'\n",
-                "            if uppercase(stimulus) == stimulus\n",
-                "                return \"Calm down, I know what I'm doing!\"\n",
+                "    sent=strip(stimulus)\n",
+                "    ans=\"Whatever.\"\n",
+                "\n",
+                "    if length(sent)==0\n",
+                "        ans=\"Fine. Be that way!\"\n",
+                "    elseif endswith(sent,'?')\n",
+                "        if isupper(sent)\n",
+                "            ans=\"Calm down, I know what I'm doing!\"\n",
+                "        else\n",
+                "            ans=\"Sure.\"\n",
+                "        end\n",
+                "    elseif isupper(sent)\n",
+                "        ans=\"Whoa, chill out!\"\n",
+                "    end\n",
+                "\n",
+                "    return ans\n",
+                "\n",
+                "end\n",
+                "\n",
+                "function isupper(sent)\n",
+                "    res=false\n",
+                "    for c ∈ sent\n",
+                "        if isletter(c)\n",
+                "            if isuppercase(c)\n",
+                "                res=true\n",
                 "            else\n",
-                "                return \"Sure.\"\n",
+                "                res=false\n",
+                "                break\n",
                 "            end\n",
                 "        end\n",
                 "    end\n",
-                "    if length(strip(stimulus))==0\n",
-                "        return \"Fine. Be that way!\"\n",
-                "    elseif uppercase(stimulus)==stimulus\n",
-                "        return \"Whoa, chill out!\"\n",
-                "    else\n",
-                "        return \"Whatever.\"\n",
-                "    end\n",
+                "    return res\n",
                 "end\n",
                 "\n",
                 "\n",
-                "bob(\"Hä?\")\n",
                 "# stimulus = \"I hate?\"\n",
                 "# stimulus[length(stimulus)]"
             ]
@@ -91,35 +106,34 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 53,
+            "execution_count": 2,
             "metadata": {},
             "outputs": [
                 {
                     "output_type": "stream",
                     "name": "stdout",
                     "text": [
-                        "\u001b[37m4?: \u001b[39m\u001b[91m\u001b[1mTest Failed\u001b[22m\u001b[39m at \u001b[39m\u001b[1mIn[53]:63\u001b[22m\n  Expression: bob(question) == response[:question]\n   Evaluated: \"Calm down, I know what I'm doing!\" == \"Sure.\"\nStacktrace:\n [1] \u001b[0m\u001b[1mmacro expansion\u001b[22m\n\u001b[90m   @ \u001b[39m\u001b[90m./\u001b[39m\u001b[90;4mIn[53]:63\u001b[0m\u001b[90m [inlined]\u001b[39m\n [2] \u001b[0m\u001b[1mmacro expansion\u001b[22m\n\u001b[90m   @ \u001b[39m\u001b[90m/buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.6/Test/src/\u001b[39m\u001b[90;4mTest.jl:1226\u001b[0m\u001b[90m [inlined]\u001b[39m\n [3] \u001b[0m\u001b[1mmacro expansion\u001b[22m\n\u001b[90m   @ \u001b[39m\u001b[90m./\u001b[39m\u001b[90;4mIn[53]:62\u001b[0m\u001b[90m [inlined]\u001b[39m\n [4] \u001b[0m\u001b[1mmacro expansion\u001b[22m\n\u001b[90m   @ \u001b[39m\u001b[90m/buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.6/Test/src/\u001b[39m\u001b[90;4mTest.jl:1151\u001b[0m\u001b[90m [inlined]\u001b[39m\n [5] top-level scope\n\u001b[90m   @ \u001b[39m\u001b[90m./\u001b[39m\u001b[90;4mIn[53]:62\u001b[0m\n\u001b[37m:) ?: \u001b[39m\u001b[91m\u001b[1mTest Failed\u001b[22m\u001b[39m at \u001b[39m\u001b[1mIn[53]:63\u001b[22m\n  Expression: bob(question) == response[:question]\n   Evaluated: \"Calm down, I know what I'm doing!\" == \"Sure.\"\nStacktrace:\n [1] \u001b[0m\u001b[1mmacro expansion\u001b[22m\n\u001b[90m   @ \u001b[39m\u001b[90m./\u001b[39m\u001b[90;4mIn[53]:63\u001b[0m\u001b[90m [inlined]\u001b[39m\n [2] \u001b[0m\u001b[1mmacro expansion\u001b[22m\n\u001b[90m   @ \u001b[39m\u001b[90m/buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.6/Test/src/\u001b[39m\u001b[90;4mTest.jl:1226\u001b[0m\u001b[90m [inlined]\u001b[39m\n [3] \u001b[0m\u001b[1mmacro expansion\u001b[22m\n\u001b[90m   @ \u001b[39m\u001b[90m./\u001b[39m\u001b[90;4mIn[53]:62\u001b[0m\u001b[90m [inlined]\u001b[39m\n [4] \u001b[0m\u001b[1mmacro expansion\u001b[22m\n\u001b[90m   @ \u001b[39m\u001b[90m/buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.6/Test/src/\u001b[39m\u001b[90;4mTest.jl:1151\u001b[0m\u001b[90m [inlined]\u001b[39m\n [5] top-level scope\n\u001b[90m   @ \u001b[39m\u001b[90m./\u001b[39m\u001b[90;4mIn[53]:62\u001b[0m\n\u001b[37m\u001b[1mTest Summary:                                   | \u001b[22m\u001b[39m\u001b[32m\u001b[1mPass  \u001b[22m\u001b[39m\u001b[91m\u001b[1mFail  \u001b[22m\u001b[39m\u001b[36m\u001b[1mTotal\u001b[22m\u001b[39m\nquestions                                       | \u001b[32m   7  \u001b[39m\u001b[91m   2  \u001b[39m\u001b[36m    9\u001b[39m\n  Does this cryogenic chamber make me look fat? | \u001b[32m   1  \u001b[39m      \u001b[36m    1\u001b[39m\n  Hä?                                           | \u001b[32m   1  \u001b[39m      \u001b[36m    1\u001b[39m\n  You are, what, like 15?                       | \u001b[32m   1  \u001b[39m      \u001b[36m    1\u001b[39m\n  fffbbcbeab?                                   | \u001b[32m   1  \u001b[39m      \u001b[36m    1\u001b[39m\n  4?                                            |       \u001b[91m   1  \u001b[39m\u001b[36m    1\u001b[39m\n  :) ?                                          |       \u001b[91m   1  \u001b[39m\u001b[36m    1\u001b[39m\n  Wait! Hang on. Are you going to be OK?        | \u001b[32m   1  \u001b[39m      \u001b[36m    1\u001b[39m\n  Okay if like my  spacebar  quite a bit?       | \u001b[32m   1  \u001b[39m      \u001b[36m    1\u001b[39m\n  Oida?                                         | \u001b[32m   1  \u001b[39m      \u001b[36m    1\u001b[39m\n"
+                        "\u001b[37m\u001b[1mTest Summary: | \u001b[22m\u001b[39m\u001b[32m\u001b[1mPass  \u001b[22m\u001b[39m\u001b[36m\u001b[1mTotal\u001b[22m\u001b[39m\n",
+                        "questions     | \u001b[32m   9  \u001b[39m\u001b[36m    9\u001b[39m\n",
+                        "\u001b[37m\u001b[1mTest Summary: | \u001b[22m\u001b[39m\u001b[32m\u001b[1mPass  \u001b[22m\u001b[39m\u001b[36m\u001b[1mTotal\u001b[22m\u001b[39m\n",
+                        "yelling       | \u001b[32m   8  \u001b[39m\u001b[36m    8\u001b[39m\n",
+                        "\u001b[37m\u001b[1mTest Summary: | \u001b[22m\u001b[39m\u001b[32m\u001b[1mPass  \u001b[22m\u001b[39m\u001b[36m\u001b[1mTotal\u001b[22m\u001b[39m\n",
+                        "silence       | \u001b[32m   4  \u001b[39m\u001b[36m    4\u001b[39m\n",
+                        "\u001b[37m\u001b[1mTest Summary: | \u001b[22m\u001b[39m\u001b[32m\u001b[1mPass  \u001b[22m\u001b[39m\u001b[36m\u001b[1mTotal\u001b[22m\u001b[39m\n",
+                        "misc          | \u001b[32m  10  \u001b[39m\u001b[36m   10\u001b[39m\n",
+                        "\u001b[37m\u001b[1mTest Summary:      | \u001b[22m\u001b[39m\u001b[32m\u001b[1mPass  \u001b[22m\u001b[39m\u001b[36m\u001b[1mTotal\u001b[22m\u001b[39m\n",
+                        "forceful questions | \u001b[32m   3  \u001b[39m\u001b[36m    3\u001b[39m\n"
                     ]
                 },
                 {
-                    "output_type": "error",
-                    "ename": "LoadError",
-                    "evalue": "\u001b[91mSome tests did not pass: 7 passed, 2 failed, 0 errored, 0 broken.\u001b[39m",
-                    "traceback": [
-                        "\u001b[91mSome tests did not pass: 7 passed, 2 failed, 0 errored, 0 broken.\u001b[39m",
-                        "",
-                        "Stacktrace:",
-                        " [1] finish(ts::Test.DefaultTestSet)",
-                        "   @ Test /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.6/Test/src/Test.jl:913",
-                        " [2] macro expansion",
-                        "   @ /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.6/Test/src/Test.jl:1161 [inlined]",
-                        " [3] top-level scope",
-                        "   @ ./In[53]:62",
-                        " [4] eval",
-                        "   @ ./boot.jl:360 [inlined]",
-                        " [5] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
-                        "   @ Base ./loading.jl:1094"
-                    ]
+                    "output_type": "execute_result",
+                    "data": {
+                        "text/plain": [
+                            "Test.DefaultTestSet(\"forceful questions\", Any[Test.DefaultTestSet(\"WHAT THE HELL WERE YOU THINKING?\", Any[], 1, false, false), Test.DefaultTestSet(\"WAS ZUR HÖLLE GEHT HIER VOR?\", Any[], 1, false, false), Test.DefaultTestSet(\"OIDA?\", Any[], 1, false, false)], 0, false, false)"
+                        ]
+                    },
+                    "metadata": {},
+                    "execution_count": 2
                 }
             ],
             "source": [
